fix(search): Wrap long search results over multiple lines

--- a/src/components/search/search.styl
+++ b/src/components/search/search.styl
@@ -54,16 +54,13 @@
 
 .os-search-resultItem
   box-sizing border-box
-  height 55px
   font-size 16px
-  line-height 55px
-  overflow hidden
 
 .os-search-resultItem--active
   background-color #eeeeee
 
 .os-search-resultItemColumn
-  padding-left 16px
+  padding 15px 0 15px 16px
   outline none
   cursor pointer
 
